--- a/index.html
+++ b/index.html
@@ -1,1 +1,87 @@
-<h3>欧阳思佳</h3>
+<!doctype html>
+<html lang="en">
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+    <title>BIM工程师的小站</title>
+    <style>
+        body { padding-top: 3.5rem; }
+    </style>
+</head>
+<body>
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+    <a class="navbar-brand" href="#"><img alt="photo" src="https://avatars3.githubusercontent.com/u/61423756?s=460&v=4" width="40" height="40" /></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+                <a class="nav-link" href="#">首页 <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">联系</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#" >关于</a>
+            </li>
+        </ul>
+
+    </div>
+</nav>
+
+<main role="main">
+
+    <!-- Main jumbotron for a primary marketing message or call to action -->
+    <div class="jumbotron">
+        <div class="container">
+            <h1 class="display-3">BIM是一种思维方式</h1>
+            <p>BIM（Building Information Modeling）技术是Autodesk公司在2002年率先提出，已经在全球范围内得到业界的广泛认可，它可以帮助实现建筑信息的集成，从建筑的设计、施工、运行直至建筑全寿命周期的终结，各种信息始终整合于一个三维模型信息数据库中，设计团队、施工单位、设施运营部门和业主等各方人员可以基于BIM进行协同工作，有效提高工作效率、节省资源、降低成本、以实现可持续发展。</p>
+            <p>BIM的核心是通过建立虚拟的建筑工程三维模型，利用数字化技术，为这个模型提供完整的、与实际情况一致的建筑工程信息库。该信息库不仅包含描述建筑物构件的几何信息、专业属性及状态信息，还包含了非构件对象（如空间、运动行为）的状态信息。借助这个包含建筑工程信息的三维模型，大大提高了建筑工程的信息集成化程度，从而为建筑工程项目的相关利益方提供了一个工程信息交换和共享的平台。</p>
+        </div>
+    </div>
+
+    <div class="container">
+        <!-- Example row of columns -->
+        <div class="row">
+            <div class="col-md-4">
+                <h2>B</h2>
+                <p><a class="btn btn-secondary" href="#" role="button">Building</a></p>
+                <p>"建筑"不是狭义理解的房子，可以是建筑的一部分或一栋房子或建筑工程</p>
+            </div>
+            <div class="col-md-4">
+                <h2>I</h2>
+                <p><a class="btn btn-secondary" href="#" role="button">Information</a></p>
+                <p>分为几何信息和非几何信息。几何信息是建筑物丽可测量的信息，非几何信息包括时间、空间、物理、造价等相关信息</p>
+            </div>
+            <div class="col-md-4">
+                <h2>M</h2>
+                <p><a class="btn btn-secondary" href="#" role="button">Modeling</a></p>
+                <p>基于各类BIM软件，从不同应用阶段划分了三个维度。</p>
+            </div>
+        </div>
+
+        <hr>
+
+    </div> <!-- /container -->
+
+</main>
+
+<footer class="container">
+    <p>&copy; Company 2017-2020</p>
+</footer>
+
+
+<!-- Optional JavaScript -->
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+</body>
+</html>
